src/s1/s1/static/stylesheets/scss/components/_button_theme.scss
.button,
.button-cta,
.button-cta-secondary {
    text-transform: uppercase;
}

.button-cta,
.button-cta-secondary,
.button {
    @include rem(height, 30px);
    @include rem(line-height, 30px);
    @include rem(border-radius, 15px);
    font-weight: $font-weight-medium;

/*doc
---
title: Call-to-action button narrow
name: button.button-cta.m-narrow
parent: button
---

Narrower cta button

```html_example
<a class="button-cta m-narrow" href="">Link</a>
<button type="button" class="button-cta m-narrow">Button</button>
<input type="submit" class="button-cta m-narrow" value="Submit" />
<input type="submit" class="button-cta m-narrow" value="Disabled" disabled="disabled" />
<a class="button-cta ng-disabled m-narrow" href="">Disabled Link</a>
```
*/

    &.m-narrow {
        @include rem(height, 20px);
        @include rem(line-height, 20px);
        @include rem(border-radius, 10px);
    }

    &.m-menu-action {
        border-radius: 0;
        color: $color-brand-one-normal;
        font-size: $font-size-small;

        &:hover:enabled, &:focus:enabled, &.is-active {
            color: $color-brand-one-extrovert;
        }
    }
}

.button-cta,
.button-cta-secondary {
    &:active, &.is-active {
        color: $color-text-inverted;
    }
}

.button-cta-secondary {
    border: 0;
    color: $color-text-normal;

    &:hover, &:focus {
        background: $color-brand-one-introvert;
    }

    &:active, &.is-active {
        background: $color-brand-one-extrovert;
        color: $color-text-inverted;
    }

    &.m-introvert {
        color: $color-brand-one-normal;
    }

    &.ng-disabled,
    &:disabled {
        &:hover,
        &:focus,
        &:active {
            background: transparent;
            color: $color-text-normal;
        }
    }
}

.button-cta {
    &:active, &.is-active {
        background: $color-brand-one-extrovert;
    }
}

/*doc
---
title: Call-to-action button variant
name: button.button-cta.m-variant
parent: button
---

cta button variant

```html_example
<a class="button-cta m-variant" href="">Link</a>
<button type="button" class="button-cta m-variant">Button</button>
<input type="submit" class="button-cta m-variant" value="Submit" />
<input type="submit" class="button-cta m-variant" value="Disabled" disabled="disabled" />
<a class="button-cta ng-disabled m-variant" href="">Disabled Link</a>
```
*/

.button-cta.m-variant {
    @extend .button-cta;
    background: $color-brand-two-normal;
    color: $color-text-inverted;

    &:hover:enabled, &:focus:enabled {
        background: $color-brand-two-introvert;
    }

    &.ng-disabled,
    &:disabled {
        &:hover,
        &:focus,
        &:active {
            background: $color-brand-two-normal;
            color: $color-text-inverted;
        }
    }
}

.button-group {
    display: inline-block;
    
    .button {
        border-radius: 0;

        &:first-child {
            @include rem(border-radius, 15px 0 0 15px);
        }

        &:last-child {
            @include rem(border-radius, 0 15px 15px 0);
        }
    }
}

